Updated home page text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <header>
 <nav class="navbar section-content">
 <a href="index.html" class="nav-logo">
-<img src="images/Aquaflask.jpg" alt="Sample Image" width="160">
+<img src="images/Aquaflask.png
+" alt="Sample Image" width="160">
 <ul class="nav-menu">
 <li class="nav-item">
 <a href="index.html" class="nav-link">Home</a>
@@ -33,8 +34,8 @@
 <section class="hero-section">
 <div class="section-content">
 <div class="hero-details">
-<h1 class="title">Welcome to Aquaflask, Aidan Chua</h1>
-<h2 class="subtitle">Welcome to Aquaflask, Aidan Chua</h2>
+<h1 class="title">Hello!</h1>
+<h2 class="subtitle">Welcome to Aquaflask, Aidan</h2>
 <p class="description">This is the Home Page.</p>
 <div class="buttons">
 <a href="#" class="button order-now">Order Now</a>
