--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="section-content">
 <div class="hero-details">
 <h1 class="title">Hello!</h1>
-<h2 class="subtitle">Welcome to Aquaflask, Aidan</h2>
+<h2 class="subtitle">Welcome to Aquaflask, Aidan Chua</h2>
 <p class="description">This is the Home Page.</p>
 <div class="buttons">
 <a href="#" class="button order-now">Order Now</a>
@@ -43,7 +43,7 @@
 </div>
 </div>
 <div class="hero-image-wrapper">
-<img src="images/White-Hero-Section.jpg" alt="Hero">
+<img src="Flask.jpg" alt="Hero">
 </div>
 </div>
 </section>
