Updated home page text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 </div>
 <div class="hero-image-wrapper">
-<img src="Flask.jpg" alt="Hero">
+<img src="images/Flask.jpg" alt="Hero">
 </div>
 </div>
 </section>
