--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="images/White-Hero-Section.jpg" alt="Hero">
+                    <img src="images/Flask.jpg" alt="Hero">
 
                 </div>
             </div>
