--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <section class="hero-section">
 <div class="section-content">
 <div class="hero-details">
-<h1 class="title">Hello!</h1>
-<h2 class="subtitle">Welcome to Aquaflask, Aidan Chua</h2>
+<h1 class="title">Welcome to AquaFlask, Chua</h1>
+<h2 class="subtitle">Your thermal flask Which Needed Everyday</h2>
 <p class="description">This is the Home Page.</p>
 <div class="buttons">
 <a href="#" class="button order-now">Order Now</a>
@@ -43,7 +43,7 @@
 </div>
 </div>
 <div class="hero-image-wrapper">
-<img src="images/Flask.jpg" alt="Hero">
+<img src="images/MarineBlueAquaflask.png" alt="Hero">
 </div>
 </div>
 </section>
