--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <div class="section-content">
                 <div class="hero-details">
                     <h1 class="title">Contact Us</h1>
-                    <h2 class="subtitle">Welcome to Aquaflask, Aidan Chua </h2>
+                    <h2 class="subtitle">Corporate a partner</h2>
                     <p class="description">This is the Contact Us Page.</p>
 
                     <div class="buttons">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="images/Flask.jpg" alt="Hero">
+                    <img src="images/MarineBlueAquaflask.png" alt="Hero">
 
                 </div>
             </div>
