--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="section-content">
 <div class="hero-details">
 <h1 class="title">Welcome to AquaFlask, Chua</h1>
-<h2 class="subtitle">Your thermal flask Which Needed Everyday</h2>
+<h2 class="subtitle">Your Thermal Flask which Needed Everyday!</h2>
 <p class="description">This is the Home Page.</p>
 <div class="buttons">
 <a href="#" class="button order-now">Order Now</a>
