Updated about us page

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             <div class="section-content">
                 <div class="hero-details">
                     <h1 class="title">About Us</h1>
-                    <h2 class="subtitle">A new generation of thermal flask to take you from adventure!</h2>
+                    <h2 class="subtitle">A new generation of your thermal flask to take you from adventure!</h2>
                     <p class="description">This is the About Us Page.</p>
 
                     <div class="buttons">
