--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 </div>
 <div class="hero-image-wrapper">
-<img src="images/MarineBlueAquaflask.png" alt="Hero">
+<img src="images/BlackAquaFlask.png" alt="Hero">
 </div>
 </div>
 </section>
