--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
             <div class="section-content">
                 <div class="hero-details">
                     <h1 class="title">Our Products</h1>
-                    <h2 class="subtitle">Buy your own AquaFlask for your refreshness.</h2>
+                    <h2 class="subtitle">Buy your own AquaFlask for your refreshness!</h2>
                     <p class="description">This is the Product Page.</p>
 
                     <div class="buttons">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="images/MarineBlueAquaflask.png" alt="Hero">
+                    <img src="images/BlackAquaFlask.png" alt="Hero">
 
                 </div>
             </div>
