--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="images/MarineBlueAquaflask.png" alt="Hero">
+                    <img src="images/BlackAquaFlask.png" alt="Hero">
 
                 </div>
             </div>
