Updated home page text

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 <div class="section-content">
 <div class="hero-details">
 <h1 class="title">Welcome to AquaFlask, Chua</h1>
-<h2 class="subtitle">Your Thermal Flask which Needed Everyday!</h2>
+<h2 class="subtitle">Your Thermal Flask Which Needed Everyday!</h2>
 <p class="description">This is the Home Page.</p>
 <div class="buttons">
-<a href="#" class="button order-now">Order Now</a>
-<a href="#" class="button contact-us">Contact Us</a>
+<a href="#" class="button new-releases">New Releases</a>
+<a href="#" class="button product-highlights">Product Highlights</a>
 </div>
 </div>
 <div class="hero-image-wrapper">
