--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
                     <p class="description">This is the About Us Page.</p>
 
                     <div class="buttons">
-                        <a href="#" class="button order-now">Order Now</a>
-                        <a href="#" class="button contact-us">Contact Us</a>
+                        <a href="#" class="button learn-more">Learn more</a>
+                        <a href="#" class="button mission">Mission</a>
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
