--- a/product.html
+++ b/product.html
@@ -40,8 +40,8 @@
                     <p class="description">This is the Product Page.</p>
 
                     <div class="buttons">
-                        <a href="#" class="button order-now">Order Now</a>
-                        <a href="#" class="button contact-us">Contact Us</a>
+                        <a href="#" class="button products">Products</a>
+                        <a href="#" class="button acessories">Acessories</a>
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
