--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <p class="description">This is the Contact Us Page.</p>
 
                     <div class="buttons">
-                        <a href="#" class="button order-now">Order Now</a>
+                        <a href="#" class="button email-us">Email Us</a>
                         <a href="#" class="button contact-us">Contact Us</a>
                     </div>
                 </div>
